almost done handle with indexes

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <h3>Add new book</h3>
         <div class="error hide"></div>
         <div class="book-info"">
-          <input class=" input" type="text" id="title" placeholder="Title" required="" maxlength="100">
-          <input class="input" type="text" id="author" placeholder="Author" required="" maxlength="100">
-          <input class="input" type="number" id="pages" placeholder="Pages" required="" max="10000">
+          <input class=" input" type="text" id="title" placeholder="Title" required="" maxlength="100" autocomplete="off">
+          <input class="input" type="text" id="author" placeholder="Author" required="" maxlength="100" autocomplete="off">
+          <input class="input" type="number" id="pages" placeholder="Pages" required="" max="10000" autocomplete="off">
         </div>
         <div class="is-read">
           <label for="is-read">Have you read it?</label>
