book storage coded

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
   <div class="grid-container">
     <div class="header">
+      <div class="container">
       <h1 class="title">Library</h1>
       <button class="log-button">Log In</button>
+    </div>
     </div>
     <div class="main-container">
       <div class="menu">
