--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <div class="grid-container">
     <div class="header">
       <div class="container">
-      <h1 class="title">Library</h1>
-      <button class="log-button">Log In</button>
-    </div>
+        <h1 class="title">Library</h1>
+        <button class="log-button">Log In</button>
+      </div>
     </div>
     <div class="main-container">
       <div class="menu">
@@ -44,9 +44,9 @@
         <h3>Add new book</h3>
         <div class="error hide"></div>
         <div class="book-info"">
-          <input class=" input" type="text" id="title" placeholder="Title" required="" maxlength="100" autocomplete="off">
-          <input class="input" type="text" id="author" placeholder="Author" required="" maxlength="100" autocomplete="off">
-          <input class="input" type="number" id="pages" placeholder="Pages" required="" max="10000" autocomplete="off">
+          <input class=" input" type="text" id="title" placeholder="Title" required="" maxlength="100">
+          <input class="input" type="text" id="author" placeholder="Author" required="" maxlength="100">
+          <input class="input" type="number" id="pages" placeholder="Pages" required="" max="10000">
         </div>
         <div class="is-read">
           <label for="is-read">Have you read it?</label>
